Version: 0.1.3
Date: 2013-
  1. Closing connection in the destructor of connectivity impl. classes 
  2. Automatic quoting/escaping of values - one of the measure to avoid SQL injection
Version: 0.1.2
Date: 2013-10-20
  1. Improved NULL handling
  2. Improved HTML documentation
Version: 0.1.2
Date: 2013-07-13
Changes:
  1. Removed FileLogger, Transaction, MGet classes
Version: 0.1.1
Date: 2013-05-18
Changes:
  1. Added public API comments
  2. Changed few interfaces without affecting 0.1.0 interface
Version: 0.1.0
Date: 2013-05-14
Changes:
  1. First github release