@@ -59,17 +59,7 @@ public method close {}
 # method  : get - Retrieve a single record from a table/view          
 # args    : schema_name - name of the table/view
 #           fieldslist  - optional list of fields to be retrieved
-#           condition   - list of dictionaries. Every dictionary contains
-#                         name-value pairs that will be joined with an
-#                         AND operator. The list elements are joined
-#                         with an OR operator. For e.g., the list:
-#
-#                          {{f1 val1 f2 val2} {f1 val3 f2 val4}}
-#
-#                         is translated into:
-#
-#                          ((f1='val1' AND f2='val2') OR
-#                                (f1='val3' AND f2='va	l4'))
+#           conditionlist  - see _prepare_condition method
 #           format      - one of "dict" or "list"
 # returns : a record as a dict with fieldname-value pairs
 #
@@ -107,17 +97,7 @@ public method insert {schema_name namevaluepairs {sequence_fields ""}}
 # method  : update         - update one or more records in a table/view           
 # args    : schema_name    - name of the table/view
 #           namevaluepairs - a dict containing fieldname-value pairs
-#           condition   - list of dictionaries. Every dictionary contains
-#                         name-value pairs that will be joined with an
-#                         AND operator. The list elements are joined
-#                         with an OR operator. For e.g., the list:
-#
-#                          {{f1 val1 f2 val2} {f1 val3 f2 val4}}
-#
-#                         is translated into:
-#
-#                          ((f1='val1' AND f2='val2') OR
-#                                (f1='val3' AND f2='va	l4'))
+#           conditionlist  - see _prepare_condition method
 #
 # returns : status of the update operation.
 #
@@ -128,17 +108,8 @@ public method update {schema_name namevaluepairs {conditionlist ""}}
 # ----------------------------------------------------------------------
 # method  : delete         - delete one or more records from a table/view           
 # args    : schema_name    - name of the table/view
-#           condition   - list of dictionaries. Every dictionary contains
-#                         name-value pairs that will be joined with an
-#                         AND operator. The list elements are joined
-#                         with an OR operator. For e.g., the list:
+#           conditionlist  - see _prepare_condition method
 #
-#                          {{f1 val1 f2 val2} {f1 val3 f2 val4}}
-#
-#                         is translated into:
-#
-#                          ((f1='val1' AND f2='val2') OR
-#                                (f1='val3' AND f2='va	l4'))
 # returns : status of delete operation.
 #
 # ----------------------------------------------------------------------
@@ -203,7 +174,6 @@ protected method _prepare_insert_stmt {schema_name namevaluepairs} {
 	${log}::debug $stmt
 	return $stmt
 }
-
 
 # ----------------------------------------------------------------------
 # method  : 
@@ -295,10 +265,24 @@ protected method _prepare_delete_stmt {schema_name {conditionlist ""}} {
 }
 
 # ----------------------------------------------------------------------
+# method  : 
+# args    : 
+# 
+#  conditionlist   - list of dictionaries. Every name-value pair in a
+#                    dictionary is used for an 'equal' comparison and
+#                    are joined with an AND operator. The list elements
+#                    are joined with an OR operator. For e.g., the list:
 #
+#                    {{f1 val1 f2 val2} {f1 val3 f2 val4}}
 #
+#                    is translated into:
 #
+#                    ((f1='val1' AND f2='val2') OR
+#                                   (f1='val3' AND f2='val4'))
 #
+#  Note: Values are quoted / escaped using the implementation of quote
+#        method by derived classes.
+#                          
 # ----------------------------------------------------------------------
 protected method _prepare_condition {conditionlist} {
 	set sqlcondition [list]
